<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_lock"
        android:title="@string/menu_lock"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_lock_open_24_white"/>

    <item
        android:id="@+id/menu_share"
        android:title="@string/menu_share"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_6_ft_apart_24"/>

    <item
        android:id="@+id/menu_delete"
        android:title="@string/menu_delete"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_delete_24_white"/>

    <item
        android:id="@+id/menu_add"
        android:title="@string/menu_add"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_add_circle_24_white"/>

</menu>