<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View"/>
        <variable name="isConnected" type="Boolean"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context=".fragments.ShareViaBluetoothFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back"
            android:theme="?attr/actionBarTheme"
            app:title="@string/share_via_bluetooth"
            app:titleTextColor="@color/design_default_color_on_primary"
            />

        <TextView
            android:id="@+id/textViewPairedDevices"
            android:layout_margin="10dp"
            android:visibility="@{isConnected ? View.INVISIBLE : View.VISIBLE, default=visible}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_of_paired_devices" />

        <TextView
            android:id="@+id/textViewPairedDevicesInformation"
            android:layout_margin="10dp"
            android:visibility="@{isConnected ? View.INVISIBLE : View.VISIBLE, default=visible}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_the_device_with_which_you_want_to_exchange_data" />
        <TextView
            android:id="@+id/textViewStatus"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_devices"
            android:visibility="@{isConnected ? View.GONE : View.VISIBLE, default=visible}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            tools:listitem="@layout/frame_device" />

        <Button
            android:id="@+id/buttonSendDataToConnectedDevice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{isConnected ? View.VISIBLE : View.GONE, default=visible}"
            android:text="@string/send_your_data_to_connected_device" />
        <TextView
            android:id="@+id/textViewInformationAboutReceiving"
            android:layout_marginLeft="10dp"
            android:textSize="15dp"
            android:visibility="@{isConnected ? View.VISIBLE : View.GONE, default=visible}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_wait_for_receiving_the_data" />
    </LinearLayout>
</layout>